add simple calendar gem, work on debugging issues

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -4,12 +4,12 @@
         <%= link_to image_tag("wooden-tent-2.jpg", :alt => "front-of-cabin", size: "600x600"), '/' %>
       </div>
       <div class="col-sm-6" id="homepage-nav">
-        <div class="logo">
-          <h1>The Wooden Tent<h1>
-            <em><h5>45.3322&#176; N, 121.7094&#176; W</h5></em>
-          </div>
+        <div class="home-logo">
+          <h1>The Wooden Tent</h1>
+          <em><h5>45.3322&#176; N, 121.7094&#176; W</h5></em>
+        </div>
         <ul class="nav">
-            <li><%= link_to "CALENDAR", '/' %></li>
+            <li><%= link_to "CALENDAR", '/calendar' %></li>
             <li><%= link_to "MAKE A RESERVATION", '' %></li>
           <% if current_user %>
             <li><%= link_to "SIGN OUT", '/users/sign_out', method: 'delete' %></li>
@@ -24,3 +24,4 @@
   </div>
 
   <%= render 'footer' %>
+  <%= render 'simple_calendar/calendar' %>
