--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,30 +1,32 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.navbar {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  width: 430px;
+.nav {
   font-family: 'Gudea', sans-serif;
+  color: #121212 !important;
+  text-decoration: none !important;
+  list-style-type: none;
 }
 
-.navbar h1 {
-  font-family: 'Karla', sans-serif;
+.home-logo {
+  font-family: 'Poiret One', cursive;
 }
 
 .logo {
   padding-top: 30px;
   padding-bottom: 50px;
-  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
   width: 430px;
 }
 
-.nav navbar-nav {
-  color: #121212 !important;
-  text-decoration: none !important;
+.home-logo {
+  padding-top: 30px;
+  padding-bottom: 50px;
+  width: 50%;
+  width: 430px;
 }
 
 .footer {
