get calendar to print to page

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -24,4 +24,7 @@
   </div>
 
   <%= render 'footer' %>
-  <%= render 'simple_calendar/calendar' %>
+  
+  <%= month_calendar do |date| %>
+    <%= date %>
+    <% end %>
