--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,21 @@
-<div class="logo">
-  <h1>THE WOODEN TENT</h1>
+<div class="container" id="navbar">
+  <div class="logo">
+    <h1>THE WOODEN TENT</h1>
+  </div>
+
+    <div class="navbar">
+      <nav class="navbar navbar-transparent">
+        <ul class="nav navbar-nav">
+          <li><%= link_to "HOME", '/' %></li>
+          <li><%= link_to "MAKE A RESERVATION", '' %></li>
+          <% if current_user %>
+          <li><%= link_to "SIGN OUT", '/users/sign_out', method: 'delete' %></li>
+          <li>Hello <%= current_user.email %>!</li>
+          <% else %>
+          <li><%= link_to "SIGN UP", '/users/sign_up' %></li>
+          <li><%= link_to "SIGN IN", '/users/sign_in' %></li>
+          <% end %>
+        </ul>
+      </nav>
+    </div>
 </div>
