--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,3 +63,17 @@
   padding-left: 50px;
   padding-top: 150px;
 }
+
+#reservation-homepage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Gudea', sans-serif;
+}
+
+#new-reservation {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Gudea', sans-serif;
+}
