--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -10,7 +10,7 @@
         </div>
         <ul class="nav">
             <li><%= link_to "CALENDAR", '/calendars' %></li>
-            <li><%= link_to "MAKE A RESERVATION", '' %></li>
+            <li><%= link_to "MAKE A RESERVATION", '/reservations/new' %></li>
           <% if current_user %>
             <li><%= link_to "SIGN OUT", '/users/sign_out', method: 'delete' %></li>
             <li>Hello <%= current_user.email %>!</li>
