--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,19 +1,22 @@
-<p id="notice"><%= notice %></p>
+<%= render 'layouts/navbar' %>
 
-<h1>Meetings</h1>
+<div class="container" id="meeting-homepage">
+  <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Start time</th>
-      <th>End time</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1>Meetings</h1>
 
-  <tbody>
-    <% @meetings.each do |meeting| %>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Start time</th>
+        <th>End time</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @meetings.each do |meeting| %>
       <tr>
         <td><%= meeting.name %></td>
         <td><%= meeting.start_time %></td>
@@ -22,10 +25,11 @@
         <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
         <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <% end %>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Meeting', new_meeting_path %>
+  <%= link_to 'New Meeting', new_meeting_path %>
+</div>
