--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>The Wooden Tent</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= favicon_link_tag 'wooden-tent-2.jpg' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://fonts.googleapis.com/css?family=Cantarell|Gudea" rel="stylesheet">
@@ -16,8 +16,8 @@
   </head>
 
   <body>
-    <%= yield %>
     <%= flash[:alert] %>
     <%= flash[:notice] %>
+    <%= yield %>
   </body>
 </html>
