--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,3 +77,15 @@
   margin-right: auto;
   font-family: 'Gudea', sans-serif;
 }
+
+#calendar-view {
+  font-family: 'Gudea', sans-serif;
+}
+
+#unique-reservation {
+  padding-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Gudea', sans-serif;
+}
