--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,19 +1,21 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
+<div class="container" id="unique-reservation">
+  <p>
+    <strong>Name:</strong>
+    <%= @reservation.name %>
+  </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @reservation.name %>
-</p>
+  <p>
+    <strong>Start time:</strong>
+    <%= @reservation.start_time %>
+  </p>
 
-<p>
-  <strong>Start time:</strong>
-  <%= @reservation.start_time %>
-</p>
+  <p>
+    <strong>End time:</strong>
+    <%= @reservation.end_time %>
+  </p>
 
-<p>
-  <strong>End time:</strong>
-  <%= @reservation.end_time %>
-</p>
-
-<%= link_to 'Edit', edit_reservation_path(@reservation) %> |
-<%= link_to 'Back', reservations_path %>
+  <%= link_to 'Edit', edit_reservation_path(@reservation) %> |
+  <%= link_to 'List of Reservations', reservations_path %> |
+  <%= link_to 'Calendar', calendars_path %>
+</div>
