add multiple users with reservations

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
-<p><%= @user.email %></p>
+<div class="container">
+  <p><%= @user.email %></p>
 
-<% @user_reservations.each do |reservation| %>
-  <%= reservation.name %>
-<% end %>
+  <% @user_reservations.each do |reservation| %>
+  <li><%= reservation.name %></li>
+  <% end %>
+</div>
