update datetime columns to date

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
-  <p><%= @user.email %></p>
+<div class="container" id="unique-user">
+  <p>Name: <%= @user.username %></p>
 
   <% @user_reservations.each do |reservation| %>
-  <li><%= reservation.name %></li>
+  <li><%= reservation.name %>, <%= reservation.start_time %> - <%= reservation.end_time %>,</li>
   <% end %>
 </div>
