--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -6,6 +6,11 @@
   </p>
 
   <p>
+    <strong>Reserved By:</strong>
+    <%= @reserved_by %>
+  </p>
+
+  <p>
     <strong>Start time:</strong>
     <%= @reservation.start_time %>
   </p>
