--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,6 +69,7 @@
   margin-left: auto;
   margin-right: auto;
   font-family: 'Gudea', sans-serif;
+  padding-bottom: 20px;
 }
 
 #new-reservation {
