--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -5,13 +5,13 @@
 
   <h1>Reservations</h1>
 
-  <table>
+  <table class="table">
     <thead>
       <tr>
         <th>Name</th>
-        <th>Start time</th>
-        <th>End time</th>
-        <th colspan="3"></th>
+        <th>Start day</th>
+        <th>End day</th>
+        <th colspan="6"></th>
       </tr>
     </thead>
 
@@ -21,7 +21,7 @@
           <td><%= reservation.name %></td>
           <td><%= reservation.start_time %></td>
           <td><%= reservation.end_time %></td>
-          <td><%= link_to 'Show', reservation %></td>
+          <td><%= link_to 'Show Details', reservation %></td>
           <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
           <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
