style show reservation page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,3 +98,11 @@
   margin-right: auto;
   font-family: 'Gudea', sans-serif;
 }
+
+#edit-reservation {
+  padding-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Gudea', sans-serif;
+}
