--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,3 +1,5 @@
+
+<%= render 'layouts/navbar' %>
 <!-- <p id="notice"><%= notice %></p> -->
 <div class="container" id="unique-reservation">
   <p>
@@ -24,3 +26,5 @@
   <%= link_to 'List of Reservations', reservations_path %> |
   <%= link_to 'Calendar', calendars_path %>
 </div>
+
+<%= render 'layouts/footer' %>
