--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'layouts/navbar' %>
+
 <div class="container" id="unique-user">
   <p>Name: <%= @user.username %></p>
 
@@ -5,3 +7,5 @@
   <li><%= reservation.name %>, <%= reservation.start_time %> - <%= reservation.end_time %>,</li>
   <% end %>
 </div>
+
+<%= render 'layouts/footer' %>
