add authentication to appropriate pages

--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -5,7 +5,7 @@
     <%= date %>
     <% reservations.each do |reservation| %>
         <div>
-          <strong><%= reservation.name %></strong>
+          <strong><%= link_to reservation.name, reservation_path(reservation) %></strong>
         </div>
       <% end %>
   <% end %>
