--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -15,14 +15,14 @@
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
-  <br>
+<br>
   <div class="field">
-    <%= form.label :start_time %>
+    <%= form.label :start_day %>
     <%= form.date_field :start_time %>
   </div>
   <br>
   <div class="field">
-    <%= form.label :end_time %>
+    <%= form.label :end_day %>
     <%= form.date_field :end_time %>
   </div>
   <br>
