--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -13,12 +13,12 @@
   </p>
 
   <p>
-    <strong>Start time:</strong>
+    <strong>Start day:</strong>
     <%= @reservation.start_time %>
   </p>
 
   <p>
-    <strong>End time:</strong>
+    <strong>End day:</strong>
     <%= @reservation.end_time %>
   </p>
 
