add functionality so users can only edit or delete reservations they have created

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -22,8 +22,10 @@
           <td><%= reservation.start_time %></td>
           <td><%= reservation.end_time %></td>
           <td><%= link_to 'Show Details', reservation %></td>
-          <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
-          <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if current_user.id == reservation.user_id %>
+            <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
+            <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
