--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -21,7 +21,7 @@
           <td><%= reservation.name %></td>
           <td><%= reservation.start_time %></td>
           <td><%= reservation.end_time %></td>
-          <td><%= link_to 'Show Details', reservation %></td>
+          <td><%= link_to 'Details', reservation %></td>
           <% if current_user.id == reservation.user_id %>
             <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
             <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
