--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 <%= render 'layouts/navbar' %>
 
 <div class="container" id="unique-user">
-  <p>Name: <%= @user.username %></p>
+  <p><%= @user.username %>'s upcoming reservations:</p>
 
   <% @user_reservations.each do |reservation| %>
-  <li><%= reservation.name %>, <%= reservation.start_time %> - <%= reservation.end_time %>,</li>
+  <li><%= reservation.name %>, <%= reservation.start_time %> - <%= reservation.end_time %></li>
   <% end %>
 </div>
 
