--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.date_field :end_time %>
   </div>
   <br>
+  <div class="field">
+    <%= form.label :notes %>
+    <%= form.text_field :notes, :size => 90 %>
+  </div>
+  <br>
   <div class="actions">
     <%= form.submit %>
   </div>
