--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,6 +91,12 @@
   font-family: 'Gudea', sans-serif;
 }
 
+.calendar-title {
+  font-size: 30px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
 #unique-user {
   padding-top: 20px;
   display: block;
@@ -100,6 +106,14 @@
 }
 
 #edit-reservation {
+  padding-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Gudea', sans-serif;
+}
+
+#user-authentication {
   padding-top: 20px;
   display: block;
   margin-left: auto;
