--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
-  <%= render "layouts/navbar" %>
+<%= render "layouts/navbar" %>
 
+<div class="container" id="user-authentication">
     <h2>Sign up</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
