--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -22,6 +22,11 @@
     <%= @reservation.end_time %>
   </p>
 
+  <p>
+    <strong>Notes:</strong>
+    <%= @reservation.notes %>
+  </p>
+
   <% if current_user.id == @reservation.user_id %>
     <%= link_to 'Edit', edit_reservation_path(@reservation) %> |
   <% end %>
