--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -25,6 +25,9 @@
           <% if current_user.id == reservation.user_id %>
             <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
             <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% elsif current_user.admin %>
+            <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
+            <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <% end %>
         </tr>
       <% end %>
