--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,12 +10,17 @@
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
     </div>
-
+    <br>
     <div class="field">
       <%= f.label :username %><br />
       <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
     </div>
-
+    <br>
+    <div class="field">
+      <%= f.label :avatar  %>
+      <%= f.file_field :avatar %>
+   </div>
+   <br>
     <div class="field">
       <%= f.label :password %>
       <% if @minimum_password_length %>
@@ -23,12 +28,12 @@
       <% end %><br />
       <%= f.password_field :password, autocomplete: "off" %>
     </div>
-
+    <br>
     <div class="field">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
-
+    <br>
     <div class="actions">
       <%= f.submit "Sign up" %>
     </div>
