--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,7 @@
           <% if current_user %>
           <li><%= link_to "SIGN OUT", '/users/sign_out', method: 'delete' %></li>
           <li><%= link_to current_user.username.upcase, user_path(current_user) %></li>
+          <li class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb)) %></li>
           <% else %>
           <li><%= link_to "SIGN UP", '/users/sign_up' %></li>
           <li><%= link_to "SIGN IN", '/users/sign_in' %></li>
