--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,8 @@
 }
 
 .footer {
-  // position: fixed;
+  position: absolute;
+  height: 60px;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -55,7 +56,7 @@
 }
 
 #home {
-  padding-top: 60px;
+  padding-top: 80px;
   padding-bottom: 80px;
 }
 
@@ -132,4 +133,20 @@
     overflow: hidden;
     text-align: center;
     img { width: 100% }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#body {
+   padding:10px;
+   padding-bottom:60px;   /* Height of the footer */
+}
+
+html {
+  min-height: 100%;
+  position: relative;
 }
