--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -9,6 +9,8 @@
         </div>
       <% end %>
   <% end %>
+  <br>
+  <h2>See photos of #TheWoodenTent</h2>
 </div>
 
 <%= render 'layouts/footer' %>
